--- a/client/package.json
+++ b/client/package.json
@@ -42,9 +42,11 @@
     "react-signature-canvas": "^1.0.6",
     "react-signature-pad-wrapper": "^3.4.0",
     "react-spinners": "^0.13.8",
+    "react-textarea-autosize": "^8.5.3",
     "react-to-print": "^2.15.1",
     "recharts": "^2.12.7",
     "styled-components": "^6.1.11",
+    "sweetalert2": "^11.14.1",
     "to-words": "^4.1.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
