--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.6.0",
     "@iconscout/react-unicons-thinline": "^0.0.1",
-    "@mui/material": "^6.1.2",
+    "@mui/icons-material": "^6.1.3",
+    "@mui/material": "^6.1.3",
     "@react-spring/web": "^9.7.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
