--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_BASE_URL=http://localhost:6002/api
+REACT_APP_API_BASE_URL=http://136.239.196.178:5002/api
 
-REACT_APP_URL_STORAGE=http://localhost:6002/storage
+REACT_APP_URL_STORAGE=http://136.239.196.178:5002/storage
