--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "smct",
+  "name": "request_form",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -77,6 +77,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.25.9",
     "@types/number-to-words": "^1.2.3",
     "@types/pusher-js": "^4.2.2",
     "@types/react-datepicker": "^6.2.0",
