--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -14,44 +14,13 @@ services:
       - ./docker-compose/nginx/default.conf:/etc/nginx/conf.d/default.conf
     networks:
       - requestform
-
-  mysql:
-    image: mysql:8.0
-    container_name: request-mysql
-    restart: unless-stopped
     environment:
-      MYSQL_DATABASE: request_form
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-      MYSQL_PASSWORD: ${DB_PASSWORD}
-      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
-      MYSQL_RANDOM_ROOT_PASSWORD: ${DB_PASSWORD}
-      SERVICE_TAGS: dev
-      SERVICE_NAME: mysql
-    ports:
-      - "3306:3306"
-    volumes:
-      - requestform_data:/var/lib/mysql
-    networks:
-      - requestform
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "mysql"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
-
-  request-phpmyadmin:
-    image: phpmyadmin/phpmyadmin
-    container_name: request-phpmyadmin
-    restart: unless-stopped
-    ports:
-      - 8080:80  # Expose phpMyAdmin on port 8080
-    environment:
-      PMA_HOST: mysql  # Use 'mysql' as the service name
-      PMA_USER: smct
-      PMA_PASSWORD: ${DB_PASSWORD}
-    networks:
-      - requestform
+      DB_CONNECTION: mysql
+      DB_HOST: 172.17.0.1  # Replace with your host's IP if necessary
+      DB_PORT: 3306
+      DB_DATABASE: request_form
+      DB_USERNAME: smct
+      DB_PASSWORD: smct 
 
   nginx:
     image: nginx:alpine
