--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -8,10 +8,11 @@ services:
     restart: unless-stopped
     working_dir: /var/www/
     volumes:
-      - ./storage:/var/www/storage
-      - ./bootstrap/cache:/var/www/bootstrap/cache
+     # - ./storage:/var/www/storage
+     # - ./bootstrap/cache:/var/www/bootstrap/cache
       - ./:/var/www
       - ./docker-compose/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - /mnt/requestUploads:/mnt/requestUploads
     networks:
       - requestform
     environment:
