--- a/server/docker-compose/nginx/default.conf
+++ b/server/docker-compose/nginx/default.conf
@@ -6,6 +6,13 @@ server {
     access_log /var/log/nginx/access.log;
     root /var/www/public;
 
+ # Serve static files like images
+    location /request-form-files/ {
+        alias /mnt/nvme0n1/requestUploads/request_form_profile_pictures/;
+        try_files $uri $uri/ =404;
+    }
+
+
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
