--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -32,6 +32,7 @@ services:
     volumes:
       - ./docker-compose/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./:/var/www
+      - /mnt/nvme0n1/requestUploads:/mnt/nvme0n1/requestUploads
     networks:
       - requestform
 
