--- a/server/docker-compose/nginx/default.conf
+++ b/server/docker-compose/nginx/default.conf
@@ -38,6 +38,20 @@ server {
         }
     }
 
+# Enable correct MIME types for images
+    http {
+        include       mime.types;
+        default_type  application/octet-stream;
+
+        # Add image types explicitly
+        types {
+            image/jpeg    jpg jpeg;
+            image/png     png;
+            image/gif     gif;
+            image/webp    webp;
+        }
+    }
+
 }
 
 
