--- a/server/docker-compose/nginx/default.conf
+++ b/server/docker-compose/nginx/default.conf
@@ -1,58 +1,53 @@
+# The 'http' block should be at the outer level, before the 'server' block.
+http {
+    # Global settings for the HTTP block (gzip, include directives, etc.)
+    include       mime.types;
+    default_type  application/octet-stream;
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+    access_log  /var/log/nginx/access.log  main;
 
-server {
-    listen 8002;
-    index index.php index.html;
-    error_log  /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
-    root /var/www/public;
+    sendfile        on;
+    tcp_nopush      on;
+    tcp_nodelay     on;
+    keepalive_timeout  65;
+    types_hash_max_size 2048;
 
- # Serve static files like images
-    location /request-form-files/ {
-        alias /mnt/nvme0n1/requestUploads/request_form_profile_pictures/;
-        try_files $uri $uri/ =404;
-    }
+    # Server block defines how Nginx handles requests for your domain
+    server {
+        listen       8002;
+        server_name  localhost;
 
+        # Root directory for the site
+        root   /var/www/html;
+        index  index.php index.html index.htm;
 
-    location ~ \.php$ {
-        try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass requestform:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-    }
-    location / {
-        try_files $uri $uri/ /index.php?$query_string;
-        gzip_static on;
-    }
+        # Serve static files for /request-form-files/ from the mounted directory
+        location /request-form-files/ {
+            alias /mnt/nvme0n1/requestUploads/request_form_profile_pictures/;
+            try_files $uri $uri/ =404;
+        }
 
-    location /phpmyadmin {
-        root /usr/share/phpmyadmin;  # Correct root for phpMyAdmin
-        index index.php index.html index.htm;
-        location ~ ^/phpmyadmin/(.*\.php)$ {
-            fastcgi_pass unix:/var/run/php/php8.2-fpm.sock;  # Adjust PHP version if needed
+        # Location for all other requests
+        location / {
+            try_files $uri $uri/ /index.php?$query_string;
+        }
+
+        # Handle PHP files (if any)
+        location ~ \.php$ {
+            try_files $uri =404;
+            fastcgi_pass requestform:9000;  # Adjust to your PHP-FPM container
             fastcgi_index index.php;
-            fastcgi_param SCRIPT_FILENAME $document_root/$1;
             include fastcgi_params;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            fastcgi_param PATH_INFO $fastcgi_path_info;
+        }
+
+        # Fallback if file or directory doesn't exist
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   /usr/share/nginx/html;
         }
     }
-
-# Enable correct MIME types for images
-    http {
-        include       mime.types;
-        default_type  application/octet-stream;
-
-        # Add image types explicitly
-        types {
-            image/jpeg    jpg jpeg;
-            image/png     png;
-            image/gif     gif;
-            image/webp    webp;
-        }
-    }
-
 }
-
-
-
