--- a/server/docker-compose/nginx/default.conf
+++ b/server/docker-compose/nginx/default.conf
@@ -1,8 +1,14 @@
-# The 'http' block should be at the outer level, before the 'server' block.
+# The 'events' block is required in Nginx for worker process settings
+events {
+    worker_connections 1024;  # Number of simultaneous connections per worker process
+}
+
+# The 'http' block should be at the outer level, before the 'server' block
 http {
     # Global settings for the HTTP block (gzip, include directives, etc.)
     include       mime.types;
     default_type  application/octet-stream;
+
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
