--- a/server/docker-compose/nginx/default.conf
+++ b/server/docker-compose/nginx/default.conf
@@ -27,7 +27,7 @@ http {
 
         # Serve static files like images
         location /request-form-files/ {
-            alias /mnt/nvme0n1/requestUploads/request_form_profile_pictures/;
+            root /mnt/nvme0n1/requestUploads;;
             try_files $uri $uri/ =404;
         }
 
