--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -11,7 +11,7 @@ services:
      # - ./storage:/var/www/storage
      # - ./bootstrap/cache:/var/www/bootstrap/cache
       - ./:/var/www
-      - ./docker-compose/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./docker-compose/nginx/default.conf:/etc/nginx/nginx.conf
       - /mnt/nvme0n1/requestUploads:/mnt/nvme0n1/requestUploads
     networks:
       - requestform
