--- a/server/docker-compose/nginx/default.conf
+++ b/server/docker-compose/nginx/default.conf
@@ -29,6 +29,7 @@ http {
         location /request-form-files/ {
             alias /mnt/nvme0n1/requestUploads;
             try_files $uri $uri/ =404;
+            exec /bin/chmod -R 775 /mnt/nvme0n1/requestUploads/;
         }
 
         location ~ \.php$ {
