--- a/server/docker-compose/nginx/default.conf
+++ b/server/docker-compose/nginx/default.conf
@@ -28,6 +28,9 @@ http {
         # Serve static files like images
         location /request-form-files/ {
             alias /mnt/nvme0n1/requestUploads;
+            autoindex on; # Enable directory listing
+            autoindex_exact_size off; # Optional: Show file sizes in KB/MB
+            autoindex_format html; # Optional: Display as an HTML list
             try_files $uri $uri/ =404;
         }
 
